Added defensive copy method in ModelImpl